--- a/Pages/Disaster/AddDisaster.cshtml
+++ b/Pages/Disaster/AddDisaster.cshtml
@@ -33,7 +33,7 @@
 				<!-- Disaster Name -->
 				<div class="mb-3">
 					<label class="form-label">Disaster Name: *</label>
-					<input type="text" class="form-control" name="disasterName" value="@Model.disasterInfo.disasterName" placeholder="e.g. Typhoon Pedro" required maxlength="65">
+					<input type="text" class="form-control" name="disasterName" value="@Model.disasterInfo.disasterName" placeholder="e.g. Typhoon Pedro" required maxlength="65" />
 				</div>
 
 				<!-- Disaster Type -->
@@ -54,13 +54,13 @@
 				<!-- Date Occurred -->
 				<div class="mb-3">
 					<label class="form-label">Date Occurred: *</label>
-					<input type="date" class="form-control text-muted" name="dateOccured" value="@Model.disasterInfo.dateOccured" required pattern="\d{4}-\d{2}-\d{2}">
+					<input type="date" class="form-control text-muted" name="dateOccured" value="@Model.disasterInfo.dateOccured" required pattern="\d{4}-\d{2}-\d{2}" />
 				</div>
 
 				<!-- Disaster Description -->
 				<div class="mb-3">
 					<label class="form-label">Description: *</label>
-					<textarea class="form-control" name="description" value="@Model.disasterInfo.description" rows="4" placeholder="e.g. With wind speeds exceeding 160 miles per hour and torrential rains, the typhoon caused widespread flooding, landslides, and destruction of homes and infrastructure. Thousands were evacuated, and relief efforts were quickly mobilized to provide aid and assistance to affected communities." required></textarea>
+					<textarea class="form-control" name="description" value="@Model.disasterInfo.description" rows="4" placeholder="e.g. With wind speeds exceeding 160 miles per hour and torrential rains, the typhoon caused widespread flooding, landslides, and destruction of homes and infrastructure. Thousands were evacuated, and relief efforts were quickly mobilized to provide aid and assistance to affected communities." required /></textarea>
 				</div>
 
 				<div class="mb-3">
