--- a/Pages/UserManagement/Create.cshtml
+++ b/Pages/UserManagement/Create.cshtml
@@ -23,31 +23,36 @@
 
 		<div class="row pt-4">
 			<form method="POST">
-				<div class="row mb-3 user-container">
-					<label class="form-label" for="InputDisasterName">User Type:</label>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="userType" value="Admin" id="adminRadio"
-						@if (Model.userInfo.userType == "Admin")
-						{
-							<text>checked</text>
-						}>
-						<label class="form-check-label" for="adminRadio">Admin</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="userType" value="LGU Staff" id="lguRadio"
-						@if (Model.userInfo.userType == "LGU Staff")
-						{
-							<text>checked</text>
-						}>
-						<label class="form-check-label" for="lguRadio">LGU Staff</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="userType" value="EC Staff" id="ecRadio"
-						@if (Model.userInfo.userType == "EC Staff")
-						{
-							<text>checked</text>
-						}>
-						<label class="form-check-label" for="ecRadio">EC Staff</label>
+				<div class="row mb-3 user-container justify-content-center">
+					<div class="col-md-4">
+							<label class="form-label">User Type:</label>
+
+							<div class="form-check d-flex align-items-center">
+								<input class="form-check-input" type="radio" name="userType" value="Admin" id="adminRadio"
+								@if (Model.userInfo.userType == "Admin")
+								{
+									<text>checked</text>
+								}>
+								<label class="form-check-label" for="adminRadio">Admin</label>
+							</div>
+
+							<div class="form-check d-flex align-items-center">
+								<input class="form-check-input" type="radio" name="userType" value="LGU Staff" id="lguRadio"
+								@if (Model.userInfo.userType == "LGU Staff")
+								{
+									<text>checked</text>
+								}>
+								<label class="form-check-label" for="lguRadio">LGU Staff</label>
+							</div>
+							
+							<div class="form-check d-flex align-items-center">
+								<input class="form-check-input" type="radio" name="userType" value="EC Staff" id="ecRadio"
+								@if (Model.userInfo.userType == "EC Staff")
+								{
+									<text>checked</text>
+								}>
+								<label class="form-check-label" for="ecRadio">EC Staff</label>
+							</div>
 					</div>
 				</div>
 
@@ -68,8 +73,9 @@
 
 				<!-- Cancel and Save Button -->
 				<div class="button-spacer">
-					<button class="btn btn-outline-secondary mr-10" href="/UserManagement/Index" role="button">Cancel</button>
-					<button type="submit" class="btn btn-primary" id="submitBtn">Next<i class="bi bi-arrow-right" style="padding:5px"></i></button>
+					<a class="btn btn-outline-secondary mr-10" href="/UserManagement/Index" role="button">Cancel</a>
+					<button type="submit" class="btn btn-primary" id="submitBtn">Next
+						<i class="bi bi-arrow-right" style="padding:5px"></i></button>
 				</div>
 
 			</form>
