--- a/Pages/UserManagement/CreateAdmin.cshtml
+++ b/Pages/UserManagement/CreateAdmin.cshtml
@@ -25,23 +25,19 @@
         }
 
         <form method="POST">
-            <input type="hidden" name="userID" value="@Model.userID" />
 
             <div class="row mb-3 user-container"> 
-                <div class="row mb-3">
-                    <p class="text-danger text-end">* Required field</p>
-                </div>
 
                 <div class="row mb-3 pb-1">
-                    <label class="col-sm-2 col-form-label">User ID:</label>
-                    <div class="col-sm-10">
+                    <label class="form-label">User ID:</label>
+                    <div class="form-answer">
                         <span class="form-control-plaintext form-readonly">@Model.userID</span>
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="InputAdminName">Admin Name:<span class="text-danger" style="padding:5px">*</span></label>
-                    <input type="text" id="adminName" name="adminName" class="form-control" required maxlength="65" placeholder="adminJohn" />
+                    <input type="text" id="adminName" name="adminName" class="form-control" required maxlength="65" placeholder="adminJohn"/>
                 </div>
 
                 <input type="hidden" name="userID" value="@Model.userID" />
@@ -56,11 +52,8 @@
 
                 <!-- Cancel and Save Button -->
                 <div class="button-spacer">
-                    <button class="btn btn-outline-secondary mr-10" href="#" role="button">
-                        <i class="bi bi-arrow-left" style="padding:5px;"></i>
-                        Previous</button>
-                    <button class="btn btn-outline-secondary mr-10" href="/UserManagement/CreateAdmin?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" role="button">
-                        Cancel</button>
+                    <a class="btn btn-outline-secondary mr-10" href="/UserManagement/CreateAdmin?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" role="button">
+                        Cancel</a>
                     <button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
                 </div>
             </div>
