--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -15,7 +15,8 @@
                             <i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home
                         </a>
                     </li>
-                    <li class="breadcrumb-item active" aria-current="page">User Management</li>
+                    <li class="breadcrumb-item active" aria-current="page">
+                        <strong>User Management</strong></li>
                 </ol>
             </nav>
 
@@ -43,8 +44,8 @@
         </div>
     </div>
 
-    <div class="table-responsive">
-        <table class="table align-middle table-hover " style="width:100%">
+    <div class="table-responsive pt-2">
+        <table class="table align-middle table-hover" style="width:100%">
             <thead>
                 <tr>
                     <th></th>
