Changed the User ID.

--- a/Pages/UserManagement/CreateAdmin.cshtml
+++ b/Pages/UserManagement/CreateAdmin.cshtml
@@ -28,11 +28,9 @@
 
             <div class="row mb-3 user-container"> 
 
+                <!-- USERNAME -->
                 <div class="row mb-3 pb-1">
-                    <label class="form-label">User ID:</label>
-                    <div class="form-answer">
-                        <span class="form-control-plaintext form-readonly">@Model.userID</span>
-                    </div>
+                    <label class="form-label">User ID: @Model.userID</label>
                 </div>
 
                 <div class="mb-3">
