--- a/Pages/UserManagement/CreateECStaff.cshtml
+++ b/Pages/UserManagement/CreateECStaff.cshtml
@@ -34,10 +34,7 @@
 
                 <!-- USERNAME -->
                 <div class="row mb-3 pb-1">
-                    <label class="form-label">User ID:</label>
-                    <div class="form-answer">
-                        <span class="form-control-plaintext form-readonly">@Model.userID</span>
-                    </div>
+                    <label class="form-label">User ID: @Model.userID</label>
                 </div>
 
                 <!-- FIRST NAME -->
