--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                             <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Database</a>
                             <ul class="dropdown-menu" data-bs-theme="light">
                                 <li><a class="nav-link text-dark" asp-area="" asp-page="/Family/Index">Family Database</a></li>
-                                <li><a class="nav-link text-dark" asp-area="" asp-page="/Staff/Index">Staff Database</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-page="/ECStaffDatabase/Index">EC Staff Database</a></li>
                             </ul>
                         </li>
 
