--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -48,15 +48,15 @@
 				@foreach (var item in Model.listEvacuation)
 				{
 					<tr>
-						<td width="30%">@item.centerName</td>
+						<td width="25%">@item.centerName</td>
 						<td width="20%">@item.streetAddress</td>
-						<td width="10%">@item.barangayID</td>
+						<td width="15%">@item.barangayID</td>
 						<td width="10%">@item.maxCapacity</td>
 						<td width="15%">@item.status</td>
 						<td width=15%>
 							<button class="btn btn-dark"><i class="bi bi-card-list"></i></button>
-							<a button class="btn btn-success" href="/EvacuationCenter/EditEvacuationCenter?centerID=@item.centerID"><i class="bi bi-pencil-fill"></i></a>
-							<a button class="btn btn-danger" href="/EvacuationCenter/DeleteEvacuationCenter?centerID=@item.centerID"><i class="bi bi-trash-fill"></i></a>
+							<a class="btn btn-success" href="/EvacuationCenter/EditEvacuationCenter?centerID=@item.centerID"><i class="bi bi-pencil-fill"></i></a>
+							<a class="btn btn-danger" href="#" onclick="confirmDelete('@item.centerID')"><i class="bi bi-trash-fill"></i></a>
 						</td>
 					</tr>
 				}
@@ -64,3 +64,11 @@
 		</table>
 	</div>
 </div>
+
+<script>
+	function confirmDelete(centerID) {
+		if (confirm("Are you sure you want to delete this evacuation center?")) {
+			window.location.href = "/EvacuationCenter/DeleteEvacuationCenter?centerID=" + centerID;
+		}
+	}
+</script>
