--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -63,7 +63,7 @@
 						<td width=15%>
 							<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 							<a class="btn btn-success" href="/Disaster/EditDisaster?disasterID=@item.disasterID"><i class="bi bi-pencil-fill"></i></a>
-							<a class="btn btn-danger" href="/Disaster/DeleteDisaster?disasterID=@item.disasterID"><i class="bi bi-trash-fill"></i></a>
+							<a class="btn btn-danger" href="#" onclick="confirmDelete('@item.disasterID')"><i class="bi bi-trash-fill"></i></a>
 						</td>
 					</tr>
 				}
@@ -71,3 +71,11 @@
 		</table>
 	</div>
 </div>
+
+<script>
+	function confirmDelete(disasterID) {
+		if (confirm("Are you sure you want to delete this disaster?")) {
+			window.location.href = "/Disaster/DeleteDisaster?disasterID=" + disasterID;
+		}
+	}
+</script>
